--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 h1 {
     color: #000;
-    font-size: 24px;
-    font-weight: normal;
+    font-family: Calibri;
+    font-size: 36px;
     margin: 0 0 14px 0;
     text-align: center;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
 }
